<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgetpassword"
    android:orientation="vertical"
    android:background="@drawable/bg1">


    <ImageView
        android:id="@+id/back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/icon2"
        android:transitionName="SplashImage"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/todo"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-medium"
        android:text="@string/change_password"
        android:textColor="@color/teal_700"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif"
        android:transitionName="SplashText"
        android:text="@string/enter_registered_e_mail"
        android:textColor="@color/teal_700"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        >

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@color/white"
            android:drawablePadding="16dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:textSize="14sp"
            android:autofillHints="emailAddress" />

        <Button
            android:id="@+id/reset"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/loginbtn1"
            android:text="@string/reset_password"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>